docs/skyblock-builder/1.16.x/config/dimensions.md
# Dimensions
## Overworld
Here you can set if the overworld should generate as in a normal world. This will ignore the configured 
[structures](structures.md#generating-structures) and [features](structures.md#generating-features). This is useful when
your [starting dimension](spawn.md#dimension) is not the overworld.

## The Nether
Here you can set if the nether should generate as in a normal world. This will ignore the configured 
[structures](structures.md#generating-structures) and [features](structures.md#generating-features).

## The End
Here you can set if the end should generate as in a normal world. This will ignore the configured 
[structures](structures.md#generating-structures) and [features](structures.md#generating-features). Additionally, you
can choose if the main island (with the dragon) should be generated or not.

## Other dimensions
All other dimensions (added by datapacks, or other mods) will not be void and can't be configured. If you want
compatability, ask the mod author of this mod or [open an issue on GitHub 🔗](https://github.com/ChaoticTrials/SkyblockBuilder/issues/new?assignees=MelanX&labels=enhancement&template=feature_request.md&title=).